# chess-library

./: +  .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  meson.build  package-lock.json  package.json  single_header_output.h
.github/workflows/: chess-library.yml  deploy.yml
benchmarks/: getfen_benchmark.cpp  meson.build  perft_benchmark.cpp  pgn_benchmark.cpp
comparison/: benchmark.cpp  comparison.md
docs/: index.md
docs/.vitepress/: config.ts
docs/pages/: Move-Generation.md  Piece-Type.md  attacks.md  bitboard.md  board-object.md  board.md  constants.md  example.md  examples.md  extending-the-library.md  file.md  getting-started.md  helpers.md  intrinsic.md  move-gen.md  move-object.md  move.md  movelist-object.md  movelist.md  pgn-parsing.md  pgn-utilities.md  piece-type.md  piece.md  piece_type.md  rank.md  square.md  types.md  usage.md  what-is.md
example/: Makefile  fishtest.pgn  main.cpp  meson.build
fuzz/: .gitignore  Makefile  fen_fuzzer.cpp  pgn_fuzzer  pgn_fuzzer.cpp
fuzz/corpus-fen/fen/: .gitignore  fen1  fen3  fen4  fen5  fen6  fen7  fen8
fuzz/corpus/pgn/: bare  fishtest-fastchess.pgn  kasparov-deep-blue.pgn  magnus-grischuk.pgn
include/: chess.hpp  meson.build
playground/: main  main.cpp
src/: attacks.hpp  attacks_fwd.hpp  bitboard.hpp  board.hpp  board_fwd.hpp  chess.cpp  chess.hpp  chess_lib.hpp  color.hpp  constants.hpp  coords.hpp  include.hpp  main.cpp  makefile  move.hpp  movegen.hpp  movegen_fwd.hpp  movelist.hpp  new_main.cpp  out  out-main.gcda  pgn.hpp  piece.hpp  sliders.hpp  threadpool.hpp  uci.hpp  utils.hpp  zobrist.hpp
testnewfuncs/: main.cpp
tests/: Makefile  bitboard.cpp  board.cpp  builtin.cpp  color.cpp  coords.cpp  hash.cpp  legal.cpp  main.cpp  meson.build  move.cpp  movelist.cpp  out  perft.cpp  perft.hpp  pgn.cpp  piece.cpp  san.cpp  uci.cpp  utils.cpp
tests/doctest/: doctest.hpp
tests/pgns/: multiple.pgn  square_braces_in_header.pgn  square_bracket_in_header.pgn
tools/: generate_shl.sh  readme.txt  shl.bat  shl.py
